Convert currency. Exception processing.

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -25,10 +25,10 @@
                 <div class="form-group">
                   <label for="from-currency">From:</label>
                   <select class="form-control" id="from-currency" name="fromcurrencylist">
-                    <option value="kr">Czech crona</option>
-                    <option value="eu">Euro</option>
-                    <option value="zl">Polish zloty</option>
-                    <option value="dl">US dollar</option>
+                    <option value="CZK">Czech crona</option>
+                    <option value="EUR">Euro</option>
+                    <option value="PLN">Polish zloty</option>
+                    <option value="USD">US dollar</option>
                   </select>
                </div>
               </div>
@@ -36,10 +36,10 @@
                 <div class="form-group">
                   <label for="to-currncy">To:</label>
                   <select class="form-control" id="to-currency" name="tocurrencylist">
-                    <option value="kr">Czech crona</option>
-                    <option value="eu">Euro</option>
-                    <option value="zl">Polish zloty</option>
-                    <option value="dl">US dollar</option>
+                    <option value="CZK">Czech crona</option>
+                    <option value="EUR">Euro</option>
+                    <option value="PLN">Polish zloty</option>
+                    <option value="USD">US dollar</option>
                   </select>
                </div>
               </div>
@@ -48,12 +48,12 @@
               <div class="col-md-2">
                 <div class="form-group">
                   <label for="amount">Amount:</label>
-                  <input type="text" class="form-control" id="amount">
+                  <input type="number" class="form-control" id="amount">
                </div>
               </div>
               <div class="col-md-2">
                 <label>Result:</label>
-                <div id="result">11232</div>
+                <div id="result"></div>
               </div>
         </div>
         <div class="row">
